Revert "Add min-height to image slots to prevent layout shift"
This reverts commit 7779af292d781e819f6b2a843ba591ff8956d133.

--- a/styles.css
+++ b/styles.css
@@ -995,8 +995,6 @@ a {
   display: block;
   background: #090b10;
   overflow: hidden;
-  min-height: 200px;
-  contain: layout style paint;
 }
 
 .pin-image {
